tests/errors/bad_equ1.asm
FUNC LABEL 0
    MOV STK A VAL 9
    EQU STK A
    PRINT STK A
    RET
